# fsrs-experiments

./: .gitignore  .pre-commit-config.yaml  Divergence_Exploration.ipynb  README.md  plot_fsrs_divergence.py  pyproject.toml  simulate_fsrs.py
fsrs_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: Divergence_Exploration.ipynb  Optimal_Retention.ipynb  Review_Time_Analysis.ipynb
patches/: fsrs_rs_python_v6.patch
scripts/: benchmark_sim.py  create_test_db.py  profile_sim.py  setup_rust_backend.sh
src/: __init__.py  anki_utils.py  deck.py  fsrs_engine.py  optimizer.py  plot_fsrs_divergence.py  proto_utils.py  simulate_fsrs.py  simulation_config.py  utils.py
tests/: test_anki_loading.py  test_collection.anki2  test_fsrs_numeric.py  test_notebooks.py  test_plotting.py  test_simulation.py  test_simulation_sanity.py  test_utils.py
