[project]
name = "fsrs-experiments"
version = "0.1.0"
description = "FSRS Divergence Experiments"
requires-python = ">=3.10"
dependencies = [
    "fsrs",
    "torch",
    "pandas",
    "tqdm",
    "matplotlib",
    "scipy",
]

[project.scripts]
fsrs-sim = "simulate_fsrs:run_simulation_cli"
fsrs-plot = "plot_fsrs_divergence:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "fsrs.*",
    "matplotlib.*",
    "numpy.*",
    "pandas.*",
    "torch.*",
    "tqdm.*"
]
ignore_missing_imports = true