[project]
name = "fsrs-experiments"
version = "0.1.0"
description = "FSRS Divergence Experiments"
requires-python = ">=3.10"
dependencies = [
    "fsrs",
    "torch",
    "pandas",
    "tqdm",
    "matplotlib",
    "scipy",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "fsrs.*",
    "matplotlib.*",
    "numpy.*",
    "pandas.*",
    "torch.*",
    "tqdm.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
